--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
         <activity
-            android:name=".MainActivity">
+            android:name="edu.up.yu18.mahjong.game.MahJong.game.MahJongMainActivity">
             <!--
             1/29/2017
             Tried to start project with no activity, and when we created our activity and later
